message(STATUS "Adding directory Fortran/IBM/compile/F2003")

add_subdirectory(abstractInterface)
add_subdirectory(ace)
add_subdirectory(allocEnh)
add_subdirectory(asynchIO)
add_subdirectory(boz)
add_subdirectory(cinterop)
add_subdirectory(cmdline)
add_subdirectory(dataPtrAssgn)
add_subdirectory(decimaledit)
add_subdirectory(deferlen)
add_subdirectory(dtparam)
add_subdirectory(encoding)
add_subdirectory(fpscrstop)
add_subdirectory(generic)
add_subdirectory(ieee)
add_subdirectory(ieeeNaNInfIO)
add_subdirectory(ieeeOtherValue)
add_subdirectory(ieee_underflow)
add_subdirectory(initExp)
add_subdirectory(intrimod)
add_subdirectory(iomsg)
add_subdirectory(iosign)
add_subdirectory(iostat)
add_subdirectory(kindArg)
add_subdirectory(misc)
add_subdirectory(move_alloc)
add_subdirectory(mProc)
add_subdirectory(mxminAll)
add_subdirectory(OO_dtio)
add_subdirectory(OO_poly)
add_subdirectory(OO_procptr)
add_subdirectory(OO_tpbnd)
add_subdirectory(OO_type)
add_subdirectory(round)
add_subdirectory(selectedCharKind)
add_subdirectory(streamio)
add_subdirectory(userename)
add_subdirectory(valueAttrwAllocCompnt)
add_subdirectory(volatile)
