message(STATUS "Adding directory Fortran/IBM/execute/F2008")

add_subdirectory(AllocMold)
add_subdirectory(argpresence)
add_subdirectory(block)
add_subdirectory(coarray)
add_subdirectory(complexPartDesignators)
add_subdirectory(contiguous)
add_subdirectory(do_concurrent)
add_subdirectory(EmptyContains)
add_subdirectory(entry)
add_subdirectory(exit)
add_subdirectory(forall)
add_subdirectory(generic)
add_subdirectory(impliedshape)
add_subdirectory(impure)
add_subdirectory(internal_proc_bindc)
add_subdirectory(internal_procptr)
add_subdirectory(intrinsics)
add_subdirectory(ISO_FORTRAN_ENV)
add_subdirectory(maxminlocbackarg)
add_subdirectory(mult_tpbnd)
add_subdirectory(newunit)
add_subdirectory(omitKeyword)
add_subdirectory(pointer_dummy)
add_subdirectory(pointer_init)
add_subdirectory(polyAssign)
add_subdirectory(proc_colon2)
add_subdirectory(recursive_alloc)
add_subdirectory(stop)
add_subdirectory(submodule)
add_subdirectory(TYPE)
add_subdirectory(value)
