message(STATUS "Adding directory Fortran/IBM/compile/F2003/dtparam")

add_subdirectory(allocate)
add_subdirectory(ArgAssociation)
add_subdirectory(ArraySections)
add_subdirectory(assignment)
add_subdirectory(associate)
add_subdirectory(AttrSpecStmt)
add_subdirectory(Common)
add_subdirectory(component)
add_subdirectory(dtDef)
add_subdirectory(dtParam)
add_subdirectory(dtSpec)
add_subdirectory(dummy_arg)
add_subdirectory(Equivalence)
add_subdirectory(FuncResult)
add_subdirectory(future)
add_subdirectory(generic)
add_subdirectory(Implicit)
add_subdirectory(inheritance)
add_subdirectory(InitExp)
add_subdirectory(intrinsics)
add_subdirectory(io)
add_subdirectory(misc)
add_subdirectory(mv_Alloc)
add_subdirectory(ObjDecAttr)
add_subdirectory(other)
add_subdirectory(procPtr)
add_subdirectory(procPtrComp)
add_subdirectory(selectType)
add_subdirectory(structConstr)
add_subdirectory(TCext)
add_subdirectory(typebnd)
add_subdirectory(typeDec)
add_subdirectory(typeparam)
add_subdirectory(typeParamInquiry)
add_subdirectory(unit_tests)
add_subdirectory(uop)
add_subdirectory(use)
add_subdirectory(value)
add_subdirectory(workaround)
