message(STATUS "Adding directory Fortran/IBM/compile/F2008/coarray")

add_subdirectory(coarray_access)
add_subdirectory(coarray_dummy)
add_subdirectory(codimension)
add_subdirectory(coindexed_object)
add_subdirectory(critical)
add_subdirectory(data)
add_subdirectory(error_stop)
add_subdirectory(intrinsics)
add_subdirectory(LockUnlock)
add_subdirectory(misc)
add_subdirectory(module_variables)
add_subdirectory(stop)
add_subdirectory(syncAll)
add_subdirectory(sync_images)
add_subdirectory(unit_test)
