message(STATUS "Adding directory Fortran/IBM/execute/F2003/allocEnh")

add_subdirectory(argAssociation)
add_subdirectory(basic)
add_subdirectory(construct)
add_subdirectory(exprEval)
add_subdirectory(funcResult)
add_subdirectory(misc)
add_subdirectory(pointer)
add_subdirectory(refToVar)
add_subdirectory(scalarExpr)
add_subdirectory(subObject)
add_subdirectory(typeConversion)
add_subdirectory(unit_tests)
add_subdirectory(zeroSize)
