message(STATUS "Adding directory Fortran/IBM/execute/F2003/cinterop")

add_subdirectory(cmnblk)
add_subdirectory(dtypes)
add_subdirectory(iso_c_binding)
add_subdirectory(isocbindm)
add_subdirectory(isocbindn)
add_subdirectory(isocbindo)
add_subdirectory(isocbindp)
add_subdirectory(isocbindr)
add_subdirectory(isoprocs)
add_subdirectory(modvar)
add_subdirectory(nmdconst)
add_subdirectory(pattr)
add_subdirectory(unit_isoc)
add_subdirectory(unit_modvar)
add_subdirectory(unit_pattr)
