message(STATUS "Adding directory Fortran/IBM/execute/F2003/cintrop1")

add_subdirectory(isocbinda)
add_subdirectory(isocbindb)
add_subdirectory(isocbindc)
add_subdirectory(isocbindd)
add_subdirectory(isocbinde)
add_subdirectory(isocbindf)
add_subdirectory(isocbindg)
add_subdirectory(isocbindh)
add_subdirectory(isocbindi)
add_subdirectory(isocbindj)
add_subdirectory(isocbindk)
add_subdirectory(isocbindl)
add_subdirectory(isocbindm)
add_subdirectory(isocbindn)
add_subdirectory(isocbindo)
add_subdirectory(isocbindp)
add_subdirectory(isocbindq)
add_subdirectory(isocbindr)
add_subdirectory(isoprocs)
add_subdirectory(nmdconst)
add_subdirectory(unit_isoc)
