message(STATUS "Adding directory Fortran/IBM/execute/F2003/ieee")

add_subdirectory(class)
add_subdirectory(copy_sign)
add_subdirectory(finite)
add_subdirectory(flag)
add_subdirectory(fpscr)
add_subdirectory(hlt_mode)
add_subdirectory(logb)
add_subdirectory(misc)
add_subdirectory(nan)
add_subdirectory(negative)
add_subdirectory(normal)
add_subdirectory(rem)
add_subdirectory(rint)
add_subdirectory(scalb)
add_subdirectory(select)
add_subdirectory(status)
add_subdirectory(support)
add_subdirectory(unit)
add_subdirectory(unordered)
add_subdirectory(value)
