message(STATUS "Adding directory Fortran/IBM/execute/F2008/coarray")

add_subdirectory(apps)
add_subdirectory(character)
add_subdirectory(coarray_access)
add_subdirectory(coarray_dummy)
add_subdirectory(codimension)
add_subdirectory(coindexed_object)
add_subdirectory(critical)
add_subdirectory(data)
add_subdirectory(defAssgn)
add_subdirectory(error_stop)
add_subdirectory(intrinsics)
add_subdirectory(misc)
add_subdirectory(module_variables)
add_subdirectory(non-distributable)
add_subdirectory(staticImages)
add_subdirectory(stop)
add_subdirectory(syncAll)
add_subdirectory(sync_images)
add_subdirectory(syncMem)
add_subdirectory(unit_test)
