message(STATUS "Adding directory Fortran/IBM/execute/F2008/intrinsics")

add_subdirectory(bit)
add_subdirectory(csizeof)
add_subdirectory(error)
add_subdirectory(EXECUTE_COMMAND_LINE)
add_subdirectory(findloc)
add_subdirectory(hypot)
add_subdirectory(IEEESelectedRealKind)
add_subdirectory(leadztrailz)
add_subdirectory(math)
add_subdirectory(popcnt)
add_subdirectory(poppar)
add_subdirectory(selectedRealKind)
add_subdirectory(storage_size)
