message(STATUS "Adding directory Fortran/IBM/compile/F2003/OO_type/abstract")

add_subdirectory(C401)
add_subdirectory(C427)
add_subdirectory(C428)
add_subdirectory(C469)
add_subdirectory(C470)
add_subdirectory(C471)
add_subdirectory(C482)
add_subdirectory(C503)
add_subdirectory(C611)
add_subdirectory(crossFeature)
add_subdirectory(deferred)
add_subdirectory(override)
