message(STATUS "Adding directory Fortran/IBM/execute/F2003/dtparam/TCext")

add_subdirectory(abstracti)
add_subdirectory(ace)
add_subdirectory(allocEnh)
add_subdirectory(asynchIO)
add_subdirectory(dataPtrAssgn)
add_subdirectory(decimaledit)
add_subdirectory(deferlen)
add_subdirectory(generic)
add_subdirectory(ieeeNaNInfIO)
add_subdirectory(initExp)
add_subdirectory(iosign)
add_subdirectory(iostat)
add_subdirectory(kindArg)
add_subdirectory(misc)
add_subdirectory(mProc)
add_subdirectory(mv_Alloc)
add_subdirectory(mxminAll)
add_subdirectory(OO_dtio)
add_subdirectory(OO_poly)
add_subdirectory(OO_procptr)
add_subdirectory(OO_tpbnd)
add_subdirectory(OO_type)
add_subdirectory(round)
add_subdirectory(userename)
add_subdirectory(valueAttrwAllocCompnt)
add_subdirectory(volatile)
