message(STATUS "Adding directory Fortran/IBM/execute/F2003/dtparam/compat")

add_subdirectory(dtpCompatDummyInGrandChild)
add_subdirectory(dtpCompatDummyInKind)
add_subdirectory(dtpCompatDummyInKindLen)
add_subdirectory(dtpCompatDummyInLen)
add_subdirectory(dtpCompatDummyInNoDTP)
add_subdirectory(dtpCompatDummyOutChildBase)
add_subdirectory(dtpCompatDummyOutGrandChild)
add_subdirectory(dtpCompatDummyOutGrandChildDefInit)
add_subdirectory(dtpCompatDummyOutKind)
add_subdirectory(dtpCompatDummyOutKindDefInit)
add_subdirectory(dtpCompatDummyOutKindLen)
add_subdirectory(dtpCompatDummyOutLen)
add_subdirectory(dtpCompatDummyOutLenDefInit)
add_subdirectory(dtpCompatDummyOutNoDTP)
add_subdirectory(dtpCompatListComponent)
add_subdirectory(dtpCompatListComponent2)
add_subdirectory(dtpCompatReturnValueGrandChild)
add_subdirectory(dtpCompatReturnValueKind)
add_subdirectory(dtpCompatReturnValueKindLen)
add_subdirectory(dtpCompatReturnValueLen)
add_subdirectory(dtpCompatReturnValueNoDTP)
