message(STATUS "Adding directory Fortran/IBM/execute/F2003/dtparam/intrinsics")

add_subdirectory(cshift)
add_subdirectory(eoshift)
add_subdirectory(merge)
add_subdirectory(move_alloc)
add_subdirectory(null)
add_subdirectory(pack)
add_subdirectory(reshape)
add_subdirectory(spread)
add_subdirectory(transfer)
add_subdirectory(transpose)
add_subdirectory(unpack)
