message(STATUS "Adding directory Fortran/IBM/execute/F2003/dtparam/unit_tests")

add_subdirectory(12.2.2)
add_subdirectory(12.3.2.5)
add_subdirectory(12.4.1.2)
add_subdirectory(4.5.1.3)
add_subdirectory(4.5.8)
add_subdirectory(5.1)
add_subdirectory(6.1.3)
add_subdirectory(allocEnh)
add_subdirectory(allocStmt)
add_subdirectory(ast_expr)
add_subdirectory(autoObj)
add_subdirectory(data)
add_subdirectory(declaration)
add_subdirectory(generic)
add_subdirectory(intrinsics)
add_subdirectory(misc)
add_subdirectory(mv_Alloc)
add_subdirectory(pointerAssgn)
add_subdirectory(procptr)
