message(STATUS "Adding directory Fortran/IBM/execute/F2008/ISO_FORTRAN_ENV/func")

add_subdirectory(COMPILER_OPTIONS)
add_subdirectory(COMPILER_VERSION)
add_subdirectory(Complex)
add_subdirectory(INT16)
add_subdirectory(INT32)
add_subdirectory(INT64)
add_subdirectory(INT8)
add_subdirectory(IOSTAT_INQUIRE_INTERNAL_UNIT)
add_subdirectory(KINDS)
add_subdirectory(MODULE)
add_subdirectory(REAL128)
add_subdirectory(REAL32)
add_subdirectory(REAL64)
