message(STATUS "Adding directory Fortran/IBM/compile/F2003/OO_dtio/unformatted/syntax")

add_subdirectory(C909)
add_subdirectory(C910)
add_subdirectory(C913)
add_subdirectory(C919)
add_subdirectory(C921)
add_subdirectory(C927)
add_subdirectory(C936)
add_subdirectory(C944)
add_subdirectory(C945)
add_subdirectory(C946)
add_subdirectory(C947)
add_subdirectory(C948)
