message(STATUS "Adding directory Fortran/IBM/compile/F2003/dtparam/TCext/OO_poly/intrinsics")

add_subdirectory(cshift)
add_subdirectory(eoshift)
add_subdirectory(merge)
add_subdirectory(null)
add_subdirectory(pack)
add_subdirectory(reshape)
add_subdirectory(spread)
add_subdirectory(transfer)
add_subdirectory(transpose)
add_subdirectory(typeQuery)
add_subdirectory(unpack)
